src/test/deca/context/valid/sansObjet/IfWithNotAndBool.deca
{
    boolean b = false;
    if (!b){
        print("Hello 2020");
    }
}