src/test/deca/context/invalid/sansObjet/BadBoolean.deca
{
    boolean b = 2020;
}